--- a/config.json
+++ b/config.json
@@ -8,6 +8,10 @@
         {
           "ParameterKey": "PriceClass",
           "ParameterValue": "PriceClass_100"
+        },
+        {
+            "ParameterKey": "UseCloudFront",
+            "ParameterValue": "false"
         }
     ]
 }
